# icn-v3

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile.agoranet  Dockerfile.node  ICN_Host_ABI_Specification.md  README.md  SECURITY.md  bootstrap_icn_types.sh  commitlint.config.js  deny.toml  justfile  mkdocs.yml  package-lock.json  package.json  test_did.rs  test_jws.rs  verify_cid.js
crates/ccl/icn-ccl-compiler/: Cargo.toml
crates/ccl/icn-ccl-compiler/src/: lib.rs  lower.rs
crates/ccl/icn-ccl-compiler/src/snapshots/: icn_ccl_compiler__tests__budget_template_lowers.snap  icn_ccl_compiler__tests__budget_template_lowers.snap.new  icn_ccl_compiler__tests__bylaws_template_lowers.snap  icn_ccl_compiler__tests__election_template_lowers.snap  icn_ccl_compiler__tests__election_template_lowers.snap.new
crates/ccl/icn-ccl-compiler/tests/: resource_tracking.rs  token_minting.rs
crates/ccl/icn-ccl-dsl/: Cargo.toml  README.md
crates/ccl/icn-ccl-dsl/src/: lib.rs
crates/ccl/icn-ccl-dsl/src/snapshots/: icn_ccl_dsl__tests__roundtrip_proposal.snap
crates/ccl/icn-ccl-parser/: Cargo.toml  KNOWN_ISSUES.md
crates/ccl/icn-ccl-parser/src/: ccl.pest  lib.rs  main.rs
crates/ccl/icn-ccl-parser/templates/: budget.ccl  bylaws.ccl  election.ccl
crates/ccl/icn-ccl-parser/tests/: parser_test.rs
crates/ccl/icn-ccl-parser/tests/snapshots/: parser_test__tests__budget.snap  parser_test__tests__budget.snap.new  parser_test__tests__bylaws.snap  parser_test__tests__bylaws.snap.new  parser_test__tests__election.snap  (+1 more)
crates/ccl/icn-ccl-wasm-codegen/: Cargo.toml  README.md
crates/ccl/icn-ccl-wasm-codegen/src/: emit.rs  lib.rs  opcodes.rs
crates/ccl/icn-ccl-wasm-codegen/tests/: emit_test.rs  gen_test.rs
crates/common/icn-crypto/: Cargo.toml
crates/common/icn-crypto/src/: jws.rs  lib.rs
crates/common/icn-crypto/tests/: jws_roundtrip.rs
crates/common/icn-economics/: Cargo.toml  README.md
crates/common/icn-economics/src/: economics.rs  lib.rs  mana.rs  mana_metrics.rs  policy.rs  sled_mana_ledger.rs  types.rs
crates/common/icn-economics/tests/: economics_tests.rs  org_scoped_ledger_tests.rs  transfer_tests.rs
crates/common/icn-identity/: Cargo.toml
crates/common/icn-identity-core/: Cargo.toml
crates/common/icn-identity-core/src/: did.rs  lib.rs  vc.rs
crates/common/icn-identity-core/tests/: did_key_test.rs  vc_normalization_test.rs
crates/common/icn-identity/benches/: trustbundle_verify.rs  vc_verify.rs
crates/common/icn-identity/src/: did.rs  identity_index.rs  keypair.rs  lib.rs  quorum.rs  scope_key.rs  tests.rs  trust_bundle.rs  trust_validator.rs  vc.rs
crates/common/icn-mesh-protocol/: Cargo.toml
crates/common/icn-mesh-protocol/src/: lib.rs
crates/common/icn-mesh-receipts/: Cargo.toml  lib.rs
crates/common/icn-mesh-receipts/src/: lib.rs  sign.rs
crates/common/icn-mesh-receipts/tests/: receipt_org_tests.rs
crates/common/icn-types/: Cargo.toml
crates/common/icn-types/benches/: dag_benchmarks.rs
crates/common/icn-types/src/: crypto.rs  dag_store.rs  error.rs  identity.rs  jobs.rs  lib.rs  mana.rs  mesh.rs  org.rs  receipt_verification.rs  reports.rs  reputation.rs  resource.rs  runtime_receipt.rs  trust.rs
crates/common/icn-types/tests/: dag.rs  trust_bundle_test.rs
crates/p2p/planetary-mesh/: Cargo.toml  README.md
crates/p2p/planetary-mesh/src/: behaviour.rs  lib.rs  metrics.rs  node.rs  protocol.rs  reputation_integration.rs
crates/p2p/planetary-mesh/tests/: full_job_lifecycle.rs  receipt_announcement_integration_test.rs  test_utils.rs
crates/runtime/host-abi/: Cargo.toml  README.md
crates/runtime/host-abi/src/: bindings.rs  error.rs  lib.rs
crates/runtime/icn-core-vm/: Cargo.toml  README.md
crates/runtime/icn-core-vm/src/: lib.rs
crates/runtime/icn-runtime/: Cargo.toml  README.md
crates/runtime/icn-runtime/src/: config.rs  context.rs  distribution_worker.rs  host_environment.rs  job_execution_context.rs  lib.rs  main.rs  metrics.rs  metrics_server.rs  reputation_integration.rs  sled_storage.rs  tests.rs
crates/runtime/icn-runtime/tests/: abi_host_function_tests.rs  anchor_receipt_mana_tests.rs  dag_store_concurrency.rs  distribution_worker.rs  distribution_worker_identity.rs  federation_bootstrap.rs  full_loop_test.rs  helpers.rs  mana_metrics_test.rs  mesh_receipt.rs  receipt_dag.rs  reputation_integration_test.rs  reputation_pipeline.rs  resource_enforcement.rs  resource_enforcement_integration.rs  token_transfer.rs
crates/services/icn-agoranet/: Cargo.toml  docker-compose.yml
crates/services/icn-agoranet/src/: app.rs  auth.rs  auth_handlers.rs  error.rs  handlers.rs  lib.rs  main.rs  mesh_handlers.rs  metrics.rs  models.rs  org_handlers.rs  transfers.rs  websocket.rs
crates/services/icn-agoranet/tests/: README.md  auth_tests.rs  docker-compose.test.yml  integration_test.rs  ledger_integration_test.rs  org_scope_api_tests.rs  org_scope_ws.rs  pg_ledger_tests.rs  run_integration_tests.sh  websocket_integration_test.rs
crates/services/icn-mesh-jobs/: Cargo.toml
crates/services/icn-mesh-jobs/migrations/: 00000000000001_refactor_jobs_table.down.sql
crates/services/icn-mesh-jobs/src/: bid_logic.rs  error.rs  job_assignment.rs  job_assignment_tests.rs  lib.rs  main.rs  metrics.rs  models.rs  reputation_cache.rs  reputation_client.rs  sqlite_store.rs  storage.rs  types.rs
crates/services/icn-mesh-jobs/tests/: governed_job_assignment_test.rs  job_assignment_integration_test.rs  p2p_assignment_roundtrip_test.rs
crates/services/icn-reputation/: Cargo.toml  Dockerfile
crates/services/icn-reputation/src/: main.rs  storage.rs
crates/tools/icn-cli/: Cargo.toml
crates/tools/icn-cli/src/: main.rs
crates/tools/meshctl/: Cargo.toml
crates/tools/meshctl/src/: main.rs
dashboard/: README.md  (+6 more)
tests/codec_tests/: Cargo.toml
tests/codec_tests/src/: lib.rs
tests/codec_tests/tests/: cid_cross.rs
tests/federation_bootstrap_test/: Cargo.toml
tests/federation_bootstrap_test/src/: lib.rs
tests/federation_bootstrap_test/src/integration_tests/: federation_bootstrap.rs  mod.rs
(+264 files in other folders)
