[workspace]
members = [
    "crates/common/icn-types",
    "crates/common/icn-crypto",
    "crates/common/icn-identity-core",
    "crates/common/icn-economics",
    "crates/ccl/icn-ccl-parser",
    "crates/ccl/icn-ccl-compiler",
    "crates/runtime/icn-core-vm",
    "crates/runtime/icn-runtime",
    "crates/p2p/planetary-mesh",
    "crates/tools/icn-cli",
    "crates/tools/meshctl",
    "crates/services/icn-agoranet",
    "tests/codec_tests"
]
resolver = "2"

[workspace.metadata.dev-dependencies]
cargo-deny = { version = "^0.14", default-features = false }
