[package]
name = "codec-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
icn-types = { path = "../../crates/common/icn-types" }
cid = { version = "0.10", features = ["serde"] }
anyhow = "1.0.75"
serde = { version = "1.0.190", features = ["derive"] }
ipld-core = { version = "0.4.2", features = ["serde", "codec"] }
multihash = "0.18.1"
multibase = "0.9.1"

[dev-dependencies]
assert_matches = "1.5" 