[package]
name = "icn-ccl-compiler"
version = "0.1.0"
edition = "2021"
description = "Cooperative Constitutional Language (CCL) compiler for ICN governance"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
icn-types = { path = "../../common/icn-types" }
icn-ccl-parser = { path = "../icn-ccl-parser" }
icn-ccl-dsl = { path = "../icn-ccl-dsl" }
wasmtime = "12.0.2"
wasm-encoder = "0.30.0"
wat = "1.0.78"
tempfile = "3.8.1"
once_cell = "1.18.0"
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.74"
handlebars = "4.4.0" 