[package]
name = "icn-ccl-dsl"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "Typed AST for the Cooperative Contract Language compiled form."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3"            # handy for custom serialize helpers
strum = { version = "0.26", features = ["derive"] }  # for enums ⇆ string
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
icn-economics = { path = "../../common/icn-economics" }

[dev-dependencies]
insta = "1.34"              # snapshot tests for AST round-trip
serde_json = "1.0"          # Added for test utils 