[package]
name = "icn-ccl-parser"
version = "0.1.0"
edition = "2021"
description = "Parser for the ICN Contract Chain Language (CCL)"

[dependencies]
pest = "2.5"
pest_derive = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
icn-types = { path = "../../common/icn-types" }

[dev-dependencies]
criterion = "0.4"
pretty_assertions = "1.3"

[[bin]]
name = "ccl-parser"
path = "src/main.rs" 