[package]
name = "icn-ccl-parser"
version = "0.1.0"
edition = "2021"
description = "Parser for the Cooperative Constitutional Language (CCL)"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
nom = "7.1.3"

[dev-dependencies]
criterion = "0.4"
pretty_assertions = "1.3"

[[bin]]
name = "ccl-parser"
path = "src/main.rs" 