[package]
name = "icn-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2.1.0"
rand_core = "0.6" # For ed25519-dalek 2.x
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
signature = "2.1.0"

[dev-dependencies]
assert_matches = "1.5"
