[package]
name = "icn-economics"
version = "0.1.0"
edition = "2021"
description = "Resource token management and economic policy enforcement for ICN"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
async-trait = "0.1.74"
icn-types = { path = "../icn-types" }
icn-identity-core = { path = "../icn-identity-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } 