[package]
name = "icn-economics"
version = "0.1.0"
edition = "2021"
description = "Resource token management and economic policy enforcement for ICN"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
async-trait = "0.1.74"
tokio = { version = "1", features = ["sync"] }
icn-types = { path = "../icn-types" }
icn-identity = { path = "../icn-identity" }
tracing = "0.1"
lazy_static = "1.4"
prometheus = { version = "0.13", features = ["process"] }
sled = "0.34"
bincode = "1.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } 
criterion = "0.5.1"
tempfile = "3.8"

# [[bench]]
# name = "economics_bench"
# harness = false 