[package]
name = "icn-identity-core"
version = "0.1.0"
edition = "2021"
description = "Core identity types for ICN [DEPRECATED]"
license = "Apache-2.0"
publish = false
doctest = false
test = false

[dependencies]
ed25519-dalek = "1.0"
base64 = "0.21"
multibase = "0.9"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
icn-types = { path = "../icn-types" }
icn-crypto = { path = "../icn-crypto" }
icn-identity = { path = "../icn-identity" }

[dev-dependencies]
assert_matches = "1.5"
rand = "0.8.5"
anyhow = "1.0.75" 