[package]
name        = "icn-identity"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0 OR MIT"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
multibase     = "0.9"
multicodec    = "0.1.0"
cid           = { version = "0.11", default-features = false, features = ["std"] }
rand          = "0.8"
thiserror     = "1"
serde         = { version = "1", features = ["derive"] }
chrono        = { version = "0.4", features = ["serde"] }
serde_json    = "1.0"
hex           = "0.4"

[dev-dependencies]
criterion     = "0.5"

[[bench]]
name = "vc_verify"
harness = false

[[bench]]
name = "trustbundle_verify"
harness = false 