[package]
name = "icn-mesh-protocol"
version = "0.1.0"
edition = "2021"
description = "Shared protocol types for ICN mesh networking"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icn-identity = { path = "../icn-identity" }
icn-types = { path = "../icn-types" }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] } 