[package]
name = "icn-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
thiserror = "1.0"
cid = { version = "0.10", features = ["serde"] }
ed25519-dalek = "1.0"
rand = "0.7" # Required for ed25519-dalek v1.0
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
icn-crypto = { path = "../icn-crypto" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }

[dev-dependencies]
serde_test = "1"
criterion = "0.4"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "dag_benchmarks"
harness = false
