[package]
name = "icn-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
thiserror = "1.0"
cid = { version = "0.10", features = ["serde-codec"] }
ed25519-dalek = { version = "2.1.0", features = ["serde"] }
rand_core = "0.6" # For ed25519-dalek 2.x
signature = "2.1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
icn-crypto = { path = "../icn-crypto" }
icn-identity = { path = "../icn-identity" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
strum = "0.26"
strum_macros = "0.26"
anyhow.workspace = true
bincode = "1.3"
url = "2.5.0"
serde_ipld_dagcbor = "0.14.2"

[dev-dependencies]
serde_test = "1"
criterion = "0.4"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "dag_benchmarks"
harness = false
