[package]
name = "icn-types"
version = "0.1.0"
edition = "2021"
description = "Core ICN data types, errors, and shared structures."
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
thiserror = "1.0"
cid = "0.11"
ed25519-dalek = "2.1.0"
rand_core = "0.6"
signature = "2.1.0"
base64 = "0.21.0"
chrono = { version = "0.4", features = ["serde"] }
icn-crypto = { path = "../icn-crypto" }
icn-identity = { path = "../icn-identity" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
strum = "0.25"
strum_macros = "0.25"
anyhow.workspace = true
bincode = "1.3"
url = { version = "2.2", features = ["serde"] }
serde_ipld_dagcbor = "0.6"
serde_bytes = "0.11"
tracing = "0.1"
multihash = "0.19"

[dev-dependencies]
serde_test = "1"
criterion = "0.4"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "dag_benchmarks"
harness = false

[features]
default = []
