[package]
name = "planetary-mesh"
version = "0.1.0"
edition = "2021"
description = "Distributed compute and job coordination for ICN"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
async-trait = "0.1.74"
tokio = { version = "1.33.0", features = ["full"] }
libp2p = { version = "0.53.1", features = ["tokio", "gossipsub", "kad", "identify", "noise", "yamux", "macros"] }
wasmtime = "12.0.2"
icn-types = { path = "../../common/icn-types" }
icn-identity-core = { path = "../../common/icn-identity-core" }
icn-economics = { path = "../../common/icn-economics" }
icn-runtime = { path = "../../runtime/icn-runtime" }
icn-core-vm = { path = "../../runtime/icn-core-vm" }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] } 