[package]
name = "planetary-mesh"
version = "0.1.0"
edition = "2021"
description = "Distributed compute and job coordination for ICN"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
async-trait = "0.1.73"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = ["gossipsub", "mdns", "macros", "tcp", "yamux", "noise", "tokio"] }
wasmtime = "12.0.2"
icn-types = { path = "../../common/icn-types" }
icn-identity = { path = "../../common/icn-identity" }
icn-economics = { path = "../../common/icn-economics" }
icn-mesh-receipts = { path = "../../common/icn-mesh-receipts" }
icn-runtime = { path = "../../runtime/icn-runtime" }
icn-core-vm = { path = "../../core/icn-core-vm" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
serde_cbor = "0.11"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
tempfile = "3.2"

[features]
# Add features if needed later 