[package]
name = "planetary-mesh"
version = "0.1.0"
edition = "2021"
description = "Distributed compute and job coordination for ICN"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
async-trait = "0.1.73"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = ["gossipsub", "mdns", "macros", "tcp", "yamux", "noise", "tokio", "kad"] }
wasmtime = "12.0.2"
icn-types = { path = "../../common/icn-types" }
icn-identity = { path = "../../common/icn-identity" }
icn-economics = { path = "../../common/icn-economics" }
icn-mesh-receipts = { path = "../../common/icn-mesh-receipts" }
icn-mesh-protocol = { path = "../../common/icn-mesh-protocol" }
icn-core-vm = { path = "../../runtime/icn-core-vm" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
serde_cbor = "0.11"
rand = "0.8"
futures = "0.3"
icn-runtime = { path = "../../runtime/icn-runtime" }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
tempfile = "3.2"

[lib]
required-features = ["_compile_planetary_mesh"]

[features]
default = []
# Enable to compile full P2P planetary mesh logic (heavy deps, WIP)
full_mesh = []
_compile_planetary_mesh = [] 