[package]
name = "host-abi"
version = "0.1.0"
edition = "2021"
authors = ["ICN Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/intercooperative/icn-v3"
description = "WASM Host ABI definitions for ICN (using Wasmtime)"

[dependencies]
icn-types = { path = "../../common/icn-types" }
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
wasmtime = "18.0.4"
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
cbindgen = "0.26.0"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = [] 
full_host_abi = [] 