[package]
name = "icn-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime execution engine for ICN governance"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_cbor = "0.11"
log = "0.4.20"
tracing = "0.1"
icn-types = { path = "../../common/icn-types" }
icn-identity = { path = "../../common/icn-identity" }
icn-mesh-receipts = { path = "../../common/icn-mesh-receipts" }
icn-mesh-protocol = { path = "../../common/icn-mesh-protocol" }
icn-core-vm = { path = "../icn-core-vm" }
icn-economics = { path = "../../common/icn-economics" }
host-abi = { path = "../host-abi" }
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.74"
wasmtime = "18.0.0"
wasmer = "3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.1.0"
signature = "2.1.0"
rand_core = "0.6"
cid = { version = "0.10", features = ["serde-codec"] }

[dev-dependencies]
icn-identity = { path = "../../common/icn-identity" }
serde_json = "1.0"
serde_cbor = "0.11"
tempfile = "3.8"
anyhow = "1.0"
async-trait = "0.1"
wat = "1.0"
wasm-encoder = "0.31"

[features]
default = [] 