[package]
name = "icn-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime execution engine for ICN governance"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_cbor = "0.11"
icn-types = { path = "../../common/icn-types" }
icn-identity = { path = "../../common/icn-identity" }
icn-mesh-receipts = { path = "../../common/icn-mesh-receipts" }
icn-mesh-protocol = { path = "../../common/icn-mesh-protocol" }
icn-core-vm = { path = "../icn-core-vm" }
icn-economics = { path = "../../common/icn-economics" }
host-abi = { path = "../host-abi" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.74"
wasmtime = { version = "18.0.4", features = ["fuel"] }
wasmer = "3.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.1.0"
signature = "2.1.0"
rand_core = "0.6"
cid = "0.11"

[dev-dependencies]
icn-identity = { path = "../../common/icn-identity" }
serde_json = "1.0"
serde_cbor = "0.11"
tempfile = "3.8"
anyhow = "1.0"
async-trait = "0.1"
wat = "1.0"
wasm-encoder = "0.31"

[features]
default = [] 