[package]
name = "icn-agoranet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
thiserror = "1.0"
rand = "0.8"
jsonwebtoken = "9.2"

# Workspace dependencies
icn-types = { path = "../../common/icn-types" }
icn-economics = { path = "../../common/icn-economics" }
icn-identity = { path = "../../common/icn-identity" }

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono", "migrate"] }
async-trait = "0.1"

# Metrics dependencies
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
metrics-util = "0.15"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] } 