[package]
name = "icn-reputation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1"

# ICN internal dependencies
icn-types = { path = "../../common/icn-types" }
icn-identity = { path = "../../common/icn-identity" } 